--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,16 +1,19 @@
 [tool.poetry]
-name = "backend"
-version = "0.1.0"
+name = "poetry-env"
+version = "1.8.3"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.12.3"
 flask = "^3.0.3"
-flask-cors = "^5.0.0"
-flask-sqlalchemy = "^3.1.1"
-psycopg2-binary = "^2.9.9"
+flask-Cors = "^5.0.0"
+bs4 = "^0.0.2"
+flask-SQLAlchemy = "^3.1.1"
+requests = "^2.32.3"
+jsonify = "^0.5"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
