--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "1.8.3"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+packages = [{include = "cams"}]
 
 [tool.poetry.dependencies]
 python = "3.12.3"
@@ -15,7 +16,12 @@ requests = "^2.32.3"
 jsonify = "^0.5"
 psycopg2 = "^2.9.9"
 
+[tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+ignore = ["F401", "E402", "F811"]
