--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ image: python:3.12.3
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
 
-# https://pip.pypa.io/en/stable/topics/caching/
 cache:
   paths:
     - .cache/pip
@@ -24,11 +23,56 @@ before_script:
   - virtualenv venv
   - source venv/bin/activate
 
+stages:
+  - test
+  - deploy
+
 test:
+  stage: test
   script:
     - pip install ruff tox  # you can also use tox
     - pip install --editable ".[test]"
     - tox -e py,ruff
+
+
+deploy_backend:
+  stage: deploy
+  image: python:3.12.3
+  before_script:
+    - python --version ; pip --version
+    - pip install virtualenv
+    - virtualenv venv
+    - source venv/bin/activate
+    - export PATH="$CI_PROJECT_DIR/venv/bin:$PATH"
+    - curl -sL https://railway.app/install.sh | sh
+    - export PATH="$HOME/.railway/bin:$PATH"
+  script:
+    - railway up --service="backend" -d
+  # only:
+  #   - main
+
+
+deploy_frontend:
+  stage: deploy
+  image: node:20
+  before_script:
+    - apt-get update && apt-get install -y curl bash
+    - curl -sL https://railway.app/install.sh | sh
+    - export PATH="$HOME/.railway/bin:$PATH"
+    - railway --version
+   # - railway whoami
+    - cd frontend
+    - npm install
+    - npm run build -- --configuration production
+  script:
+    - railway up --service=$FRONTEND_SERVICE_ID -d
+
+
+
+
+  # only:
+  #   - main
+
 
 run:
   script:
@@ -37,8 +81,3 @@ run:
   artifacts:
     paths:
       - build/*
-
-deploy:
-  stage: deploy
-  script: echo "Define your deployment script!"
-  environment: production
